# Agentic_search_2.0

./: .env.example  .gitignore  PIPELINE_README.md  README.md  config.json  evaluation_report_5.jsonl  pyproject.toml  requirements.txt  run_dashboard.py  run_pipeline.py  setup.py
.deepeval/: .deepeval_telemetry.txt
data/keywords/: uniquerepresentative_keywords_with_location.csv
data/processed/: merged_filtered_results_30.jsonl  merged_filtered_results_limited10.json  poi_evaluated.jsonl
data/results/: advanced_evaluation_report.jsonl  evaluation_results.csv  evaluation_results.jsonl  evaluation_summary.txt  merged_filtered_results_limited.json
info/: WORKFLOW_DIAGRAM.md  autocomplete_api.md  eval_plan.md
raw/: api_results_solr_270_300.jsonl  google_autocomplete_results_270_300.jsonl
src/: __init__.py  dashboard.py
src/core/: __init__.py  api_client.py  evaluation.py  evaluation_5.py  new_evaluation.py
src/scripts/: __init__.py  llm_input.json  print_llm_input.py
src/scripts/api_fetching/: __init__.py  fetch_autocomplete.py  merge_and_filter_results.py
src/scripts/data_processing/: __init__.py  extract_and_sort_keywords.py  limit_results_per_query_json_array.py  remove_duplicates.py  select_representative_keywords.py
src/scripts/evaluation/: __init__.py  run_evaluation.py  run_evaluation_5.py  run_new_evaluation.py
src/utils/: __init__.py  config.py  logger.py
