[project]
name = "agentic-search"
version = "0.1.0"
description = "An agentic search project with autocomplete functionality."
requires-python = ">=3.8"
dependencies = [
    "deepeval>=0.20.0",
    "dotenv>=0.9.9",
    "litellm>=1.37.0",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "plotly>=6.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
    "streamlit>=1.40.1",
    "streamlit-extras>=0.6.0",
    "tqdm==4.67.1",
    "uv>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
